css/style.css
@charset "UTF-8";

/*Style général applicable sur toute la page*/
* {
  color: rgb(0, 0, 0);
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
  padding: 0px;
  margin: 0px;
  text-decoration: none;
}

html, body {
  background-color: black;
  padding: 0px;
  margin: 0px;
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;

}

body {
  background-image: url(image/fond_back.jpg);
  background-repeat: no-repeat;
}

p {
  font-size: 14px;
  word-wrap: break-word;
  font-family: 'Courier New', Courier, monospace;
  text-align: justify;
  text-decoration: none;
}

h1 {
  text-align: right;
  font-size: x-large;
  text-decoration: underline;
}

/* principe de changement de fond par Gradient*/

/* .textemulticolore {
  background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
  -webkit-background-clip: text;
  -moz-background-clip: text;
  background-clip: text;
  color: transparent;
} */


/*en tête & pied de page*/
nav {
  width: 100%;
  margin: 0 auto;
  background-color: rgb(0, 0, 0);
  position: sticky;
  top: 0px;
  box-shadow: 0px 10px 4px rgb(36, 36, 92);
}

nav ul {
  list-style-type: none;
}

nav ul li {
  float: left;
  width: 12%;
  text-align: center;
  position: relative;
}

nav ul::after {
  content: "";
  display: table;
  clear: both;
}

nav a {
  display: block;
  text-decoration: none;
  color: rgb(255, 255, 255);
  border-bottom: 2px solid transparent;
  padding: 10px 0px;
  text-align: center;
  font-size: x-large;
  opacity: 0.8;
}

nav a:hover {
  color: orange;
  border-bottom: 2px solid gold;
}

.sous-menu {
  display: none;
  box-shadow: 0px 1px 2px #CCC;
  background-color: rgb(0, 0, 0);
  position: absolute;
  width: 100%;
  z-index: 1000;
}

nav>ul li:hover .sous-menu {
  display: block;
}

.sous-menu li {
  float: none;
  width: 100%;
  text-align: left;
}

.sous-menu a {
  padding: 10px;
  border-bottom: none;
}

.sous-menu a:hover {
  border-bottom: none;
  background-color: rgb(182, 25, 25);
}

.deroulant>a::after {
  content: "";
  font-size: 12px;
}

.logo {
  margin: 0;
  padding: 0;
  display: flex;
}

/* bas de page */

footer {
  text-align: justify;
  box-sizing: border-box;
  width: 100%;
  padding: 20px 0px;
  background: #4f4f4f;
  box-shadow: 0px 0px 15px #333333;
  border-top: 2px solid #ffffff;
}

footer p {
  width: 90%;
  margin: 0 auto;
  text-align: center;
}

/*Section*/

section {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  width: 100%;
  padding-bottom: 20px;
  margin: auto auto;
  box-shadow: 0px 0px 10px #a02727;
  background-color: #ffffff;
  border-radius: 60px/60px;
}

section>div {
  width: 100%;
}

.videoformat {
  justify-content: center;
  border-radius: 20px;
  box-shadow: 0px 0px 10px #a02727;
  width: 720px;
  height: 500px;
  box-sizing: border-box;
  margin: auto auto;
}


/*VERSION BUREAU DU Site (code réajustable en fonction du besoin) BETA !!!!!!!!!!!!!!!!!!!!!!!!!!!*/
@media only screen and (max-width: 800px) {
  section {
    width: 80%;
    box-shadow: 0px 0px 10px #bbbbbb;
  }
}

